--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -16,18 +16,21 @@ mixin footer(value = {})
         span(itemscope itemtype="https://schema.org/SiteNavigationElement")
           span.action-btn.pointer-default
             .action-btn-group
+              span.action-btn-spacer
               i.action-icon(inline) copyright
               span.action-btn-section
                 span.action-btn-spacer
                 span 2019
                 span  Joseph Ojo
-                span.layout-padding-left-smaller -
+                if !debug
+                  span.layout-padding-left-smaller -
                 span.action-btn-spacer
-          +link({
-            href: "/sitemap",
-            class: "layout-inline-block",
-          })(itemprop="url" title="The Joseph Ojo sitemap.")
-            span(itemprop="name") Sitemap
+          if !debug
+            +link({
+              href: "/sitemap",
+              class: "layout-inline-block",
+            })(itemprop="url" title="The Joseph Ojo sitemap.")
+              span(itemprop="name") Sitemap
         span= " | "
         +link({
           href: "https://www.linkedin.com/in/o-josephojo/",
