--- a/src/scss/components/style.scss
+++ b/src/scss/components/style.scss
@@ -153,7 +153,7 @@
 	}
 
     &-letter-head {
-        // letter-spacing: 2.54px;
+        letter-spacing: 2.54px;
         line-height: 5.42rem;
         font-size: 6.15rem;
         font-weight: 900;
