--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -351,7 +351,7 @@ a.skip-main {
     }
 }
 
-@media #{$screen-size-gt-laptop} {
+@media #{$screen-size-gt-phone} {
     .footer-stuck {
         position: absolute;
         bottom: 0;
