--- a/views/app.pug
+++ b/views/app.pug
@@ -243,33 +243,18 @@ html(lang="en")
       else
         section(id="content" itemtype="http://schema.org/WebPageElement" itemscope itemprop="mainEntity")
           //- Intro layer
-          +layer({
-            class: "layout-padding-horz-default"
-          })
+          +layer
             +layout({
-              class: "layout-contain-small layout-vert-centered-box"
+              class: "layout-contain layer-overflow-hide"
             })
-              section.layout-clearfix
-                +head
-                  h1.style-center.style-font-50--device-phone.style-primary-dark.style-bold.style-uppercase Coming Soon.
-                +main
-                  section
-                    //- .layout-padding-right-mini
-                    span.style-font-title.style-letter-head.layout-inline-block.layout-left S
-                    +p("orry, the page you are looking for is currently under construction, please be patient for a little bit longer. We are working day and night to finish this website, so as to display the story of Joseph Ojo in all its glory. Don't worry it will be worth the wait.")
-                  section.style-center
-                    br
-                    +link({
-                      href: "/",
-                      class: "style-underline action-btn action-btn-smooth layer-secondary-btn go-home",
-                    }, true)(title="Lol this is the home page")
-                      span.layout-padding-nano
-                      section.action-btn-layout
-                        span.action-btn-group.layout-padding-smaller
-                          span.action-btn-section
-                            span.action-btn-content Wanna Go Home
-                    br
-                    span.text-go-home *Lol this is the home page
+              section(class="layout-shorten layout-max-height-limited layout-flex layout-align-items-center layout-justify-content-center")
+                section.style-center.layout-margin-top-larger--device-phone
+                  +head({
+                    class: "layout-margin-bottom"
+                  })
+                    h1.style-font-45--device-phone.style-primary-dark.style-bold.style-uppercase.layout-margin-dull Coming Soon.
+                  +main
+                    +p("Sorry, the page you are looking for is currently under construction.")
 
     .layer-action-center.layer-action-center-hide
       article.layer-action-group
@@ -283,9 +268,9 @@ html(lang="en")
                   span.action-btn-content Back To Top
                 i.action-icon.style-font-size-24(inline) expand_less
 
-    block footer
     if !debug
-      +footer
+      block footer
+        +footer
     else
       +footer({
         class: "footer-stuck layout-margin-vert-top"
