--- a/views/pages/offline.pug
+++ b/views/pages/offline.pug
@@ -16,19 +16,18 @@ block preload
 block content
   section(id="content" itemtype="http://schema.org/WebPageElement" itemscope itemprop="mainEntity")
     //- Intro layer
-    +layer({
-      class: "layout-padding-horz-default"
-    })
+    +layer
       +layout({
-        class: "layout-contain-small layout-vert-centered-box"
+        class: "layout-contain layer-overflow-hide"
       })
-        section
-          +head
-            h1.h4.style-font-30--device-phone.style-primary-dark.style-bold.style-center Yikes you're offline!
-          +main({
-            class: "style-center",
-          })
-            +p("Psshhh, psshhh, you are cutting off, psshhh. You are currently offline. Reload the page or try again later.")
+        section(class="layout-shorten layout-max-height-limited layout-flex layout-align-items-center layout-justify-content-center")
+          section.style-center.layout-margin-top-larger--device-phone
+            +head({
+              class: "layout-margin-bottom"
+            })
+              h1.style-font-45--device-phone.style-primary-dark.style-bold.layout-margin-dull Yikes you're offline!
+            +main
+              +p("Psshhh, psshhh, you are cutting off, psshhh. You are currently offline. Reload the page or try again later.")
 
 block footer
   +footer({
