--- a/src/scss/components/layout.scss
+++ b/src/scss/components/layout.scss
@@ -9,6 +9,10 @@
     margin: 0 auto;
     width: 100%;
 
+    &-margin {
+        margin: auto;
+    }
+
     &-max-height {
         &,
         &-limited {
