--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -23,7 +23,7 @@ mixin navbar(value = {})
             href: "/",
             class: "navbar-title style-primary-dark-hover style-primary-dark-focus"
           })(itemprop="url" data-swup-preload title="The Joseph Ojo Logo.")
-            img.navbar-logo(src="/favicon/favicon.svg" alt="Logo." itemprop="logo")
+            img.navbar-logo(src="/favicon/favicon.svg" alt="Logo." itemprop="logo" inline)
             span.navbar-title-line
             span.name.layout-inline-block(itemprop="name") JOSEPH!
           .layout-spacer
