Color Scheme switch

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -151,14 +151,14 @@ $dark-colors: (
     "tertiary": $tertiary,
     "tertiary-dark": $tertiary-dark,
 
-    "background": #000000, // #252529
-    "surface": #2f2f35, // #2c2d2e
+    "background": #18181b, // #000000
+    "surface": #333435, // #2f2f35
     "transparent": transparent,
 
     "white": $white,
     "black": $black,
 
-    "very-light": #181b1f,
+    "very-light": #1d2125,
     "light": #525252,
     "mid-light": $mid-light,
     "mid": $mid,
