--- a/views/app.pug
+++ b/views/app.pug
@@ -54,6 +54,7 @@ html(lang="en")
     link(rel="stylesheet" href="/css/app.min.css" ph-inline)
 
     meta(charset="utf-8")
+    meta(name="color-scheme" content="dark light")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
     meta(http-equiv="Accept-CH" content="DPR, Viewport-Width, Width")
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
