--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -20,7 +20,7 @@
         width: 100%;
 
         .navbar-layout {
-            transition: background-color .5s ease;
+            transition: background-color #{$transitionDuration} ease;
             @include applyTheme(background-color, "background");
         }
 
@@ -52,7 +52,7 @@
 
             &:before {
                 @extend .layout-contain-large;
-                transition: background-color .5s ease, opacity .25s ease-out;
+                transition: background-color #{$transitionDuration} ease, opacity .25s ease-out;
                 box-shadow: 0 5px 15px rgba(0, 0, 50, .08);
                 @include applyTheme(background-color, "surface");
                 position: absolute;
@@ -86,7 +86,7 @@
         }
 
         &-title {
-            transition: color .5s ease;
+            transition: color #{$transitionDuration} ease;
             letter-spacing: 0.03em;
             line-height: $height;
             padding-left: $size;
@@ -108,7 +108,7 @@
             }
 
             &-line {
-                transition: border-left-color .5s ease;
+                // transition: border-left-color #{$transitionDuration} ease;
 
                 border-left: 1px solid transparent;
                 border-left-color: darken($mid-light, 2%);
@@ -138,7 +138,7 @@
         }
 
         &-link {
-            transition: color .5s ease;
+            transition: color #{$transitionDuration} ease;
             text-transform: uppercase;
             font-family: $bold-font;
             text-decoration: none;
@@ -156,7 +156,7 @@
 
                 &:before {
                     transition: transform .25s cubic-bezier(.25, .46, .45, .94),
-                                background-color .5s ease;
+                                background-color #{$transitionDuration} ease;
                     transform: translate3d(0, $height - 14px, 0) scaleX(0);
                     @include applyTheme(background-color, "primary-dark");
                     border: 1.5px solid transparent;
@@ -200,7 +200,7 @@
 
         &-menu, &-btn {
             & {
-                transition: color .5s ease;
+                transition: color #{$transitionDuration} ease;
             }
 
             &:hover, &:focus {
@@ -259,7 +259,7 @@
             }
 
             &-main {
-                transition: transform .5s ease-out, opacity .3s ease .1s;
+                transition: transform #{$transitionDuration} ease-out, opacity .3s ease .1s;
                 transform: translate3d(0, -100%, 0);
                 display: block;
                 width: 100%;
@@ -268,7 +268,7 @@
             }
 
             &-list {
-                transition: background-color .5s ease;
+                transition: background-color #{$transitionDuration} ease;
                 background-color: lighten($very-light, 2%); // #292d33
                 @include applyTheme(background-color, "very-light");
                 position: relative;
