--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -37,6 +37,7 @@
         }
 
         &-fixed {
+            contain: layout size;
             position: fixed;
             left: 0;
             top: 0;
