--- a/views/app.pug
+++ b/views/app.pug
@@ -243,7 +243,9 @@ html(lang="en")
 
     main.main.transition-in-view(data-container tabindex="-1")
       if !debug
-        block content
+        block hero
+        section(id="content" itemtype="http://schema.org/WebPageElement" itemscope itemprop="mainEntity")
+          block content
       else
         section(id="content" itemtype="http://schema.org/WebPageElement" itemscope itemprop="mainEntity")
           //- Intro layer
