--- a/views/app.pug
+++ b/views/app.pug
@@ -242,11 +242,11 @@ html(lang="en")
       +navbar(page)
 
     main.main.transition-in-view(data-container tabindex="-1")
-      //- if !debug
-      block hero
-      section(id="content" itemtype="http://schema.org/WebPageElement" itemscope itemprop="mainEntity")
-        block content
-      //- else
+      if !debug
+        block hero
+        section(id="content" itemtype="http://schema.org/WebPageElement" itemscope itemprop="mainEntity")
+          block content
+      else
         section(id="content" itemtype="http://schema.org/WebPageElement" itemscope itemprop="mainEntity")
           //- Intro layer
           +layer
