Fixed email problems

--- a/views/app.pug
+++ b/views/app.pug
@@ -88,7 +88,7 @@ html(lang="en")
               {
                 "@type": "ContactPoint",
                 "url": "#{defaults.websiteURL}",
-                "email": "mailto:laoluojo&#64;gmail&#46;com",
+                "email": "mailto:laoluojo@gmail.com",
                 "contactType": "customer service"
               }
             ]
@@ -119,7 +119,7 @@ html(lang="en")
               {
                 "@type": "ContactPoint",
                 "url": "#{defaults.websiteURL}",
-                "email": "mailto:laoluojo&#64;gmail&#46;com",
+                "email": "mailto:laoluojo@gmail.com",
                 "contactType": "customer service"
               }
             ]
@@ -178,7 +178,7 @@ html(lang="en")
     meta(name="web-author" content="Okiki Ojo")
     meta(name="robots" content="index, follow")
     meta(name="copyright" content="Joseph Ojo")
-    meta(name="contact" content="laoluojo&#64;gmail&#46;com")
+    meta(name="contact" content="laoluojo@gmail.com")
 
     meta(name="mobile-web-app-capable" content="yes")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0, user-scalable=yes")
