--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -35,7 +35,7 @@ mixin footer(value = {})
         span= " - "
         span(itemprop="publisher" itemscope itemtype="https://schema.org/Organization" itemid="https://josephojo.com")
           +link({
-            href: "mailto:laoluojo&#64;gmail&#46;com",
+            href: "mailto:laoluojo@gmail.com",
             class: "layout-margin-left-mini",
             content: "Email"
           })(target="_blank" rel="noreferrer noopener" itemprop="email" title="An email you can contact me with.")
