--- a/views/pages/contact-me.pug
+++ b/views/pages/contact-me.pug
@@ -50,6 +50,6 @@ block content
                 })(target="_blank" rel="noreferrer noopener")
               li(itemprop="email")
                 +link({
-                  href: "mailto:laoluojo&#64;gmail&#46;com",
+                  href: "mailto:laoluojo@gmail.com",
                   content: "Email"
                 })(target="_blank" rel="noreferrer noopener")
